--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
 
             <p class="about__description">
-              As a fullstack developer, I combine my ability to code both frontend and backend, along with a solid understanding of user needs. I am always looking for challenges that allow me to create innovative and exciting products, while improving my skills in the process.
+              As a fullstack developer, I combine my ability to code both frontend and backend, along with a solid understanding of user needs. I'm always looking for challenges that allow me to create innovative and exciting products, while improving my skills in the process.
             </p>
 
             <a href="#contact" class="button">Contact Me</a>
@@ -106,7 +106,7 @@
 
       <!--=============== SKILLS ===============-->
       <section class="skills section" id="skills">
-        <span class="section__subtitle">My abillities</span>
+        <span class="section__subtitle">My abilities</span>
         <h2 class="section__title">My Experience</h2>
 
         <div class="skills__container container grid">
@@ -157,7 +157,7 @@
                   <i class="bx bxs-badge-check"></i>
 
                   <div>
-                    <h3 class="skills__name">Git</h3>
+                    <h3 class="skills__name">Vue</h3>
                     <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
@@ -213,7 +213,7 @@
 
                   <div>
                     <h3 class="skills__name">MySQL</h3>
-                    <span class="skills__level">Intermediate</span>
+                    <span class="skills__level">Advanced</span>
                   </div>
                 </div>
 
@@ -360,7 +360,7 @@
         <span class="section__subtitle">Get in touch</span>
         <h2 class="section__title">Contact Me</h2>
 
-        <div class="contact__container container grid">
+        <div >
           <div class="contact__content">
             <h3 class="contact__title">Talk to me</h3>
 
@@ -368,9 +368,9 @@
               <div class="contact__card">
                 <i class="bx bx-mail-send contact__card-icon"></i>
                 <h3 class="contact__card-title">Email</h3>
-                <span class="contact__card-data">sarasalazarparedes@gmail.com</span>
+                <span class="contact__card-data">saraoneydisalazarparedes@gmail.com</span>
 
-                <a href="mailto:sarasalazarparedes@correo.com" target="_blank" class="contact__button">
+                <a href="mailto:saraoneydisalazarparedes@gmail.com" target="_blank" class="contact__button">
                   Write me <i class="bx bx-right-arrow-alt contact__button-icon"></i>
                 </a>
               </div>
@@ -400,7 +400,7 @@
               </div>
             </div>
           </div>
-
+<!-- 
           <div class="contact__content">
             <h3 class="contact__title">Write me your project</h3>
 
@@ -429,7 +429,7 @@
 
               <buttun class="button">Send Message</buttun>
             </form>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
