--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <!-- Basic -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">   
+   
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+ 
+     <!-- Site Metas -->
+
+    <meta name="keywords" content="Sara Salazar Paredes Portfolio Salazar sarasalazarparedes">
+    <meta name="description" content="I am a fullstack developer with skills in both frontend and backend, as well as a strong understanding of user needs. I seek challenges to create innovative products while improving my abilities.">
+    <meta name="author" content="SaraSalazarParedes">
+
+
+
+    <meta property="og:title" content="Sara Salazar Paredes - Portfolio">
+    <meta property="og:description" content="I am a fullstack developer with skills in both frontend and backend, as well as a strong understanding of user needs. I seek challenges to create innovative products while improving my abilities.">
+    <meta property="og:image" content="https://scontent.flim14-1.fna.fbcdn.net/v/t1.6435-9/145726773_3634483076644441_3172483517122191438_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=Wd8-1h_mWwMAX9lj4sy&_nc_ht=scontent.flim14-1.fna&oh=00_AT_goER3hxss0yWGKOFDPAFt0hl8gvD6QWSMNjFmitC7aw&oe=62AE35C4">
+    <meta property="og:url" content="https://sarasalazarparedes.tech">
+    <meta property="og:type" content="website">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--=============== FAVICON ===============-->
