--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </ul>
 
             <div class="home__buttons">
-              <a download="" href="assets/pdf/sara.pdf" class="button button--ghost">
+              <a download="" href="assets/pdf/sarasalazarparedes.pdf" class="button button--ghost">
                 Download CV
               </a>
               <a href="#about" class="button">About me</a>
