--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             </div>
           </div>
 
-          <div class="home__handle">
+          <!-- <div class="home__handle">
             <img src="assets/img/perfil.png" alt="" class="home__img" />
-          </div>
+          </div> -->
 
 
 
